--- a/HitsoundTweaks/manifest.json
+++ b/HitsoundTweaks/manifest.json
@@ -7,6 +7,7 @@
   "description": "Adds more configurability to hitsounds, and fixes several base game bugs to make them more reliable and consistent.",
   "gameVersion": "1.21.0",
   "dependsOn": {
-    "BSIPA": "^4.2.0"
+    "BSIPA": "^4.2.0",
+    "BeatSaberMarkupLanguage": "^1.6.6"
   }
 }
