--- a/HitsoundTweaks/manifest.json
+++ b/HitsoundTweaks/manifest.json
@@ -8,6 +8,7 @@
   "gameVersion": "1.38.0",
   "dependsOn": {
     "BSIPA": "^4.3.5",
-    "BeatSaberMarkupLanguage": "^1.12.3"
+    "BeatSaberMarkupLanguage": "^1.12.3",
+    "SiraUtil": "^3.1.12"
   }
 }
