--- a/HitsoundTweaks/manifest.json
+++ b/HitsoundTweaks/manifest.json
@@ -8,6 +8,7 @@
   "gameVersion": "1.37.0",
   "dependsOn": {
     "BSIPA": "^4.3.4",
-    "BeatSaberMarkupLanguage": "^1.11.2"
+    "BeatSaberMarkupLanguage": "^1.11.2",
+    "SiraUtil": "^3.1.12"
   }
 }
