--- a/HitsoundTweaks/HitsoundTweaks.csproj
+++ b/HitsoundTweaks/HitsoundTweaks.csproj
@@ -69,7 +69,7 @@
       <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\IPA.Loader.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Main">
+    <Reference Include="Main" Publicize="True">
       <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Main.dll</HintPath>
       <Private>False</Private>
     </Reference>
